deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sanic-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/connection-proxy-header: "keep-alive"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/configuration-snippet: |
      map $remote_addr $for_addr {
          ~^[0-9.]+$ "for=$remote_addr";         # IPv4 client address
          ~^[0-9A-Fa-f:.]+$ "for=\"[$remote_addr]\""; # IPv6 bracketed and quoted
          default "for=unknown";                # Unix socket
      }
      proxy_set_header forwarded 'by="_hostname";$for_addr;proto=$scheme;host="$http_host"';
spec:
  #tls:
  #- hosts:
  #  - example.com
  #  secretName: sanic-tls
  rules:
    #- host: example.com
  -  http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: sanic-service
            port:
              number: 8080
